<resources>
    <string name="app_name">MyWorld</string>
    <string name="welcome_message">我的世界我做主</string>
    <string name="login_name">登录邮箱</string>
    <string name="password">登录密码</string>
    <string name="login">登录</string>
    <string name="add">新建</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="my_memo">我的备忘录</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="title">标题</string>
    <string name="memo">备忘录</string>
</resources>
