<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
  	android:layout_height="match_parent">
    <TextView 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="30dp"
    	android:layout_marginLeft="30dp"
    	android:textSize="25dp"
    	android:textColor="#000000"
    	android:text="@string/edit"
    />
    <EditText 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="30dp"
    	android:layout_marginRight="15dp"
    	android:hint="@string/title"
    	android:id="@+id/scheduleTitle"
    />
    <EditText 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="30dp"
    	android:layout_marginRight="15dp"
    	android:hint="@string/memo"
    	android:id="@+id/scheduleBody"
    />
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginRight="15dp"
    	android:gravity="right"
    	android:orientation="horizontal"
    >
	    <Button
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="25dp"
			android:id="@+id/scheduleBack"
			android:text="@string/cancel" />
	    <Button 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="25dp"
			android:id="@+id/scheduleSave"
			android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>