<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/my_memo"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1.10"
            android:cacheColorHint="#00000000"
            android:divider="#AA9933"
            android:dividerHeight="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="64dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/add"></Button>

            <Button
                android:id="@+id/editBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:text="@string/edit"></Button>

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/delete"></Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>